# yahoo-scan

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  NOTICE  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: clean-inbox.yml  upload-db.yml
data/: state.sqlite
inbox_cleaner/: classify.py  cli.py  db.py  imap_client.py  rspamd.py
tests/: test_decision.py
