[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inbox-cleaner"
version = "0.1.0"
description = "Single-user Yahoo IMAP inbox triage using Rspamd + LLM (OpenRouter)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.33.0",
    "python-dotenv>=1.1.1",
    "llm>=0.27.1",
    "llm-openrouter>=0.5",
]

[project.scripts]
inbox_cleaner = "inbox_cleaner.cli:main"

[dependency-groups]
dev = ["pytest>=9.0.3"]

[tool.setuptools]
packages = ["inbox_cleaner"]

[tool.uv]
# Keep installs reproducible
exclude-newer = "2026-04-15T00:00:00Z"
